--- a/_sass/menu.scss
+++ b/_sass/menu.scss
@@ -22,10 +22,10 @@
         width: 100%;
         font-size: 2rem;
         line-height: 2.5rem;
-        font-weight: bold;
+        font-weight: 500;
         color: $white;
 
-        padding: 1rem;
+        padding: 1rem 1rem 1rem 2.5rem;
 
         text-decoration: none;
     }
@@ -68,4 +68,4 @@
             }
         }
     }
-} 
+}
